sync frontend/backend data model